--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,6 +20,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.7.7' # install the python version needed
+      
+      - name: install python packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
           
       - name: execute py script # run sj-gobierno.py to get the latest data
         env: 
