--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,10 +25,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
+  scrape:
+    runs-on: ubuntu-latest
+    steps: 
       - name: execute py script # run 
-        env: 
-          EMAIL_ADDRESS: ${{ secrets.EMAIL_ADDRESS }}
-          EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
-          EMAIL_RECIPIENT: ${{ secrets.EMAIL_RECIPIENT }}
         run: python general_spider.py
+you
