--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,7 +9,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-and-scrape:
     runs-on: ubuntu-latest
     steps:
 
@@ -25,8 +25,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-  scrape:
-    runs-on: ubuntu-latest
-    steps: 
+      
       - name: execute py script # run 
         run: python general_spider.py
